; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/isohybrid/extr_isohybrid.c_chksum_crc32.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/isohybrid/extr_isohybrid.c_chksum_crc32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@crc_tab = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @chksum_crc32(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  store i64 4294967295, i64* %5, align 8
  store i64 0, i64* %6, align 8
  br label %7

7:                                                ; preds = %27, %2
  %8 = load i64, i64* %6, align 8
  %9 = load i32, i32* %4, align 4
  %10 = zext i32 %9 to i64
  %11 = icmp ult i64 %8, %10
  br i1 %11, label %12, label %30

12:                                               ; preds = %7
  %13 = load i64, i64* %5, align 8
  %14 = lshr i64 %13, 8
  %15 = and i64 %14, 16777215
  %16 = load i64*, i64** @crc_tab, align 8
  %17 = load i64, i64* %5, align 8
  %18 = load i8*, i8** %3, align 8
  %19 = getelementptr inbounds i8, i8* %18, i32 1
  store i8* %19, i8** %3, align 8
  %20 = load i8, i8* %18, align 1
  %21 = zext i8 %20 to i64
  %22 = xor i64 %17, %21
  %23 = and i64 %22, 255
  %24 = getelementptr inbounds i64, i64* %16, i64 %23
  %25 = load i64, i64* %24, align 8
  %26 = xor i64 %15, %25
  store i64 %26, i64* %5, align 8
  br label %27

27:                                               ; preds = %12
  %28 = load i64, i64* %6, align 8
  %29 = add i64 %28, 1
  store i64 %29, i64* %6, align 8
  br label %7

30:                                               ; preds = %7
  %31 = load i64, i64* %5, align 8
  %32 = xor i64 %31, 4294967295
  ret i64 %32
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
